@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-20T00:43:21Z",
-  "count_outdated" : 6059,
-  "uniques_outdated" : 1275,
-  "count" : 6088,
-  "uniques" : 1288,
+  "timestamp" : "2025-11-22T00:42:00Z",
+  "count_outdated" : 6060,
+  "uniques_outdated" : 1276,
+  "count" : 6089,
+  "uniques" : 1289,
   "views" : [
-    {
-      "timestamp": "2025-11-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-09T00:00:00Z",
       "count": 1,
@@ -94,6 +85,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-11-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
