@@ -3,11 +3,6 @@
   "uniques": 12,
   "views": [
     {
-      "timestamp": "2025-11-07T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-11-09T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -51,6 +46,11 @@
       "timestamp": "2025-11-19T00:00:00Z",
       "count": 4,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-11-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
